# csv_median_calculator

./: CMakeLists.txt  README.md
data/: config.toml
output/: median_history.csv
src/: config_parser.cpp  config_parser.hpp  csv_reader.cpp  csv_reader.hpp  main.cpp  median_calculator.cpp  median_calculator.hpp
